# advent-of-code

./: .gitignore  Dockerfile  README.md  cli.py  data_structures.py  docker-compose.yaml  extra_itertools.py  justfile  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
year2015/: Cargo.toml
year2015/src/: d1.rs  d2.rs  main.rs
year2020/: d15.py  d16.py  d17.py  d18.py  d19.py  utils.py
year2021/: cli.py  d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  extra_itertools.py
year2022/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
