[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
typer = "^0.7.0"
cattrs = "^22.2.0"
rich = "^12.6.0"
numpy = "^1.23.5"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
